--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>Sedang apa<h2>
-    <h3>PING!!</h3>
-
-    <p>Lorem ipsum dolor sit amet; Test commit made by Arif</p>
-
-    <h1>Iseng</h1>
+    <div>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
 </body>
 </html>
