--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div class="navbar">
         <ul>
             <li></li>
         </ul>
