--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seputar Jakarta</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="../project_web_dasar/css/index.css">
 </head>
 <body>
     <div class="navbar">
@@ -15,7 +15,7 @@
     </div>
 
     <div class="jumbotron">
-
+        <h1>Iseng</h1>
     </div>
 </body>
 </html>
