--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 </head>
 <body>
     <div class="navbar">
-        <ul>
-            <li></li>
-        </ul>
-    </div>
-
-    <div class="jumbotron">
-        <h1>Iseng</h1>
+        <div class="logo">
+            <img class="logo-size" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
+        </div>
+        <div class="navigation">
+            <ul>
+                <li>Home</li>
+                <li>Sejarah</li>
+                <li>Budaya</li>
+                <li>Wisata</li>
+                <li>Rute</li>
+                <li>Kuliner</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
