--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">
             <img class="logo-size" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
         </div>
-        <div class="navigation">
+        <!-- <div class="navigation">
             <ul>
                 <li>Home</li>
                 <li>Sejarah</li>
@@ -21,7 +21,17 @@
                 <li>Rute</li>
                 <li>Kuliner</li>
             </ul>
-        </div>
+        </div> -->
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Sejarah</li>
+                <li>Budaya</li>
+                <li>Wisata</li>
+                <li>Rute</li>
+                <li>Kuliner</li>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
