removing navbar class

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../project_web_dasar/css/index.css">
 </head>
 <body>
-    <div class="navbar">
+    <div>
         <div class="logo">
             <img class="logo-size" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
         </div>
