navbar fix no bug

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../project_web_dasar/css/index.css">
 </head>
 <body>
+    <!--navbar-->
     <div class="navbar">
         <div class="logo">
             <img class="logo-size" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
@@ -22,6 +23,11 @@
                 <li>Kuliner</li>
             </ul>
         </div>
+    </div>
+
+    <!--Jumbotron-->
+    <div class="jumbotron">
+        <h1>hai</h1>
     </div>
 </body>
 </html>
