jumbotron done by yunpnzr!

--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
 
     <!--Jumbotron-->
     <div class="jumbotron">
-        <h1>hai</h1>
+        <div class="content-jumbotron">
+            <div class="header">
+                <h1>Seputar Jakarta</h1>
+            </div>
+            <div class="content-header">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
+                    Adipisci hic recusandae debitis sed delectus odit excepturi voluptate aliquam minus iusto.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
