--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seputar Jakarta</title>
     <link rel="stylesheet" href="../project_web_dasar/css/index.css">
+    <!--Font Style-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+    </style>
 </head>
 <body>
     <!--navbar-->
