commmit by yunpnzr 13 November 2022

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
         <div class="nav-menu">
             <ul>
-                <li>Home</li>
-                <li>Sejarah</li>
-                <li>Budaya</li>
-                <li>Wisata</li>
-                <li>Rute</li>
-                <li>Kuliner</li>
+                <li><a href="#" class="link-nav">Home</a></li>
+                <li><a href="#" class="link-nav">Sejarah</a></li>
+                <li><a href="#" class="link-nav">Budaya</a></li>
+                <li><a href="#" class="link-nav">Wisata</a></li>
+                <li><a href="#" class="link-nav">Rute</a></li>
+                <li><a href="#" class="link-nav">Kuliner</a></li>
             </ul>
         </div>
     </div>
