nambahin container selamat datang (basic)

--- a/index.html
+++ b/index.html
@@ -38,9 +38,18 @@
                 <h1>Seputar Jakarta</h1>
             </div>
             <div class="content-header">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
-                    Adipisci hic recusandae debitis sed delectus odit excepturi voluptate aliquam minus iusto.</p>
+                <p>Halaman web ini berisi tentang Jakarta<br>
+                    Segala informasi seputar Jakarta ada di halaman web ini!</p>
             </div>
+        </div>
+    </div>
+
+    <!--container-fluid-->
+    <div class="container-fluid">
+        <h2>SELAMAT DATANG DI JAKARTA</h2>
+        <div class="content-container-fluid">
+            <p>Dikenal sebagai Daerah Khusus Ibukota Jakarta,<br>
+                    merupakan Ibu Kota negara dan kota terbesar di Indonesia</p>
         </div>
     </div>
 
