bikin headline dan isi seputar jakarta

--- a/index.html
+++ b/index.html
@@ -53,6 +53,44 @@
         </div>
     </div>
 
+    <!--container-fluid-2-->
+    <div class="container-fluid-2">
+        <div class="container-fluid-2-content">
+            <h2>SEPUTAR JAKARTA</h2>
+        </div>
+        <div class="container-fluid-2-content-2">
+            <p>Jakarta memiliki luas sekitar 664,01 km² (lautan: 6.977,5 km²), dengan penduduk<br>
+                berjumlah 10.562.088 jiwa (2020).<br>
+                <br>
+                Jakarta merupakan kota metropolitan. Jakarta terletak di pesisir bagian barat laut<br>
+                Pulau Jawa. Dahulu pernah dikenal dengan beberapa nama diantaranya Sunda<br>
+                Kelapa, Jayakarta, dan Batavia. Jakarta juga mempunyai julukan The Big Durian<br>
+                karena dianggap kota yang sebanding New York City (Big Apple) di Indonesia.
+            </p>
+        </div>
+        <div class="peta">
+            <img class="peta-size" src="pict/peta dki.png" alt="peta jakarta" srcset="">
+        </div>
+    </div>
+
+
+        <div class="container-fluid-3">
+            <div class="container-fluid-3-content">
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<br>
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute<br>
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<br>
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia<br>
+                deserunt mollit anim id est laborum."
+                </p>
+            </div>
+            <div class="jakarta_foto">
+                <img class="jktfoto-size" src="pict/jakarta_foto.jpg" alt="foto jakarta" srcset="">
+            </div>
+        </div>
+
+    </div>
+
     <!--Script jquery-->
     <script>
         $(window).scroll(function(){
