--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
      <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,26 +21,26 @@
 </head>
 <body>
     <!--navbar-->
-    <div id="navbar" class="navbar">
+    <div id="navbar" class="navbar-1">
         <div class="logo">
             <img class="logo-size" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
         </div>
-        <div class="nav-menu">
+        <div class="nav-menu-1">
             <ul>
-                <li><a href="#" class="link-nav">Home</a></li>
-                <li><a href="#" class="link-nav">Sejarah</a></li>
-                <li><a href="#" class="link-nav">Budaya</a></li>
-                <li><a href="#" class="link-nav">Wisata</a></li>
-                <li><a href="#" class="link-nav">Rute</a></li>
-                <li><a href="#" class="link-nav">Kuliner</a></li>
+                <li><a href="#" class="link-nav-1">Home</a></li>
+                <li><a href="#" class="link-nav-1">Sejarah</a></li>
+                <li><a href="#" class="link-nav-1">Budaya</a></li>
+                <li><a href="#" class="link-nav-1">Wisata</a></li>
+                <li><a href="#" class="link-nav-1">Rute</a></li>
+                <li><a href="#" class="link-nav-1">Kuliner</a></li>
             </ul>
         </div>
     </div>
 
     <!--Jumbotron-->
-    <div class="jumbotron">
+    <div class="jumbotron-1">
         <div class="content-jumbotron">
-            <div class="header">
+            <div class="header-1">
                 <h1>Seputar Jakarta</h1>
             </div>
             <div class="content-header">
