--- a/wisata.html
+++ b/wisata.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wisata</title>
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!--CSS-->
+    <link rel="stylesheet" href="../project_web_dasar/css/wisata.css">
+    <!--Font Style-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+    </style>
+    <!--Jquery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <!--Navbar-->
+    <div id="navbar-1" class="navigation-1">
+        <div class="logo">
+            <img class="logo-size" src="pict/logo.png" alt="logo seputar jakarta" srcset="">
+        </div>
+        <div class="navigation-menu-1">
+            <ul>
+                <li><a href="#" class="link-navigation-1">Home</a></li>
+                <li><a href="#" class="link-navigation-1">Sejarah</a></li>
+                <li><a href="#" class="link-navigation-1">Budaya</a></li>
+                <li><a href="#" class="link-navigation-1">Wisata</a></li>
+                <li><a href="#" class="link-navigation-1">Rute</a></li>
+                <li><a href="#" class="link-navigation-1">Kuliner</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <script>
+        $(window).scroll(function(){
+            if ($(this).scrollTop()>50){
+                $('#navbar-1').addClass('navbar-background-1');
+            } else{
+                $('#navbar-1').removeClass('navbar-background-1');
+            }
+        });    
+    </script>
 </body>
 </html>
