--- a/wisata.html
+++ b/wisata.html
@@ -34,6 +34,13 @@
         </div>
     </div>
 
+    <!--Jumbotron-->
+    <div>
+        <div>
+            
+        </div>
+    </div>
+
     <script>
         $(window).scroll(function(){
             if ($(this).scrollTop()>50){
