buat prakiraan cuaca

--- a/index.html
+++ b/index.html
@@ -80,21 +80,58 @@
     </div>
 
 
-        <div class="container-fluid-3">
-            <div class="container-fluid-3-content">
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>
+    <div class="container-fluid-3">
+        <div class="container-fluid-3-content">
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<br>
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute<br>
                 irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<br>
                 pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia<br>
                 deserunt mollit anim id est laborum."
-                </p>
-            </div>
-            <div class="jakarta_foto">
-                <img class="jktfoto-size" src="pict/jakarta_foto.jpg" alt="foto jakarta" srcset="">
-            </div>
+            </p>
         </div>
+        <div class="jakarta_foto">
+            <img class="jktfoto-size" src="pict/jakarta_foto.jpg" alt="foto jakarta" srcset="">
+        </div>
+    </div>
 
+    <div class="container-fluid-4">
+        <div class="container-fluid-4-content text-center">
+                <br>
+                <div class="row row-cols-7">
+                    <div class="col-12"><h4>Prakiraan Cuaca</h4></div>
+                </div>
+                <br>
+                <div class="row row-cols-7">
+                    <div class="col">Senin</div>
+                    <div class="col">Selasa</div>
+                    <div class="col">Rabu</div>
+                    <div class="col">Kamis</div>
+                    <div class="col">Jumat</div>
+                    <div class="col">Sabtu</div>
+                    <div class="col">Minggu</div>
+                </div>
+
+                <div class="row row-cols-7">
+                    <div class="col"><i class="fa-solid fa-cloud-rain"></i></div>
+                    <div class="col"><i class="fa-solid fa-cloud-bolt"></i></div>
+                    <div class="col"><i class="fa-solid fa-sun"></i></div>
+                    <div class="col"><i class="fa-solid fa-cloud"></i></div>
+                    <div class="col"><i class="fa-solid fa-cloud"></i></div>
+                    <div class="col"><i class="fa-solid fa-cloud"></i></div>
+                    <div class="col"><i class="fa-solid fa-cloud"></i></div>
+                </div>
+
+                <div class="row row-cols-7">
+                    <div class="col">27°C</div>
+                    <div class="col">26°C</div>
+                    <div class="col">30°C</div>
+                    <div class="col">28°C</div>
+                    <div class="col">29°C</div>
+                    <div class="col">30°C</div>
+                    <div class="col">29°C</div>
+                </div>
+        </div>
     </div>
 
     <!--Script jquery-->
