--- a/wisata.html
+++ b/wisata.html
@@ -35,11 +35,7 @@
     </div>
 
     <!--Jumbotron-->
-    <div class="">
-        <div>
-
-        </div>
-    </div>
+    <div class="jumbotron-1"></div>
 
     <script>
         $(window).scroll(function(){
