--- a/wisata.html
+++ b/wisata.html
@@ -37,9 +37,16 @@
     <!--Jumbotron-->
     <div class="jumbotron-1"></div>
 
+    <!--container-->
+    <div class="container-1">
+        <div class="content-1">
+            <h1 class="judul">WISATA JAKARTA</h1>
+        </div>
+    </div>
+
     <script>
         $(window).scroll(function(){
-            if ($(this).scrollTop()>50){
+            if ($(this).scrollTop()>250){
                 $('#navbar-1').addClass('navbar-background-1');
             } else{
                 $('#navbar-1').removeClass('navbar-background-1');
