--- a/index.html
+++ b/index.html
@@ -134,6 +134,199 @@
         </div>
     </div>
 
+    <div class="container-fluid-5">
+        <h2>SEJARAH JAKARTA</h2>
+        <div class="container-fluid-5-content">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/batavia-tempo-dulu.png" class="card-img-top" alt="batavia">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Batavia Tempo Dulu</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/batavia-tempo-dulu.png" class="card-img-top" alt="batavia">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Batavia Tempo Dulu</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+
+                 <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/batavia-tempo-dulu.png" class="card-img-top" alt="batavia">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Batavia Tempo Dulu</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid-6">
+        <div class="container-fluid-6-content text-center">
+                <br>
+                <div class="row row-cols-2">
+                    <div class="col-12"><h4>Jumlah Penduduk</h4></div>
+                </div>
+                <br>
+                <div class="row row-cols-2">
+                    <div class="col"><h5>Laki-laki</h5></div>
+                    <div class="col"><h5>Perempuan</h5></div>
+                </div>
+                <div class="row row-cols-2">
+                    <div class="col"><h1><i class="fa-solid fa-person"></i></h1></div>
+                    <div class="col"><h1><i class="fa-solid fa-person-dress"></i><h1></div>
+                </div>
+                <div class="row row-cols-2">
+                    <div class="col"><h5>5,35 juta jiwa</h5></div>
+                    <div class="col"><h5>5,26 juta jiwa</h5></div>
+                </div>
+        </div>
+    </div>
+
+    <div class="container-fluid-7">
+        <h2>BUDAYA JAKARTA</h2>
+        <div class="container-fluid-7-content">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/ondel-ondel.jpg" class="card-img-top" alt="ondel">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Ondel - Ondel</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+
+                 <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/ondel-ondel.jpg" class="card-img-top" alt="ondel">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Ondel - Ondel</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/ondel-ondel.jpg" class="card-img-top" alt="ondel">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Ondel - Ondel</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid-8">
+        <div class="container-fluid-8-content">
+            <div class="container-fluid-8-content-2">
+                <br>
+                <p>Elang Bondol, hewan endemik dari Jakarta</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid-9">
+        <h2>WISATA JAKARTA</h2>
+        <div class="container-fluid-9-content">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/Fatahillah.jpg" class="card-img-top" alt="kotu">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Kota Tua</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/Fatahillah.jpg" class="card-img-top" alt="kotu">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Kota Tua</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/Fatahillah.jpg" class="card-img-top" alt="kotu">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Kota Tua</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+
+    <div class="container-fluid-10">
+        <div class="container-fluid-10-content">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid-11">
+        <h2>KULINER JAKARTA</h2>
+        <div class="container-fluid-11-content">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/kerak_telor_crop.jpg" class="card-img-top" alt="keraktelor">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Kerak Telor</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/kerak_telor_crop.jpg" class="card-img-top" alt="keraktelor">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Kerak Telor</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="card">
+                    <img src="pict/kerak_telor_crop.jpg" class="card-img-top" alt="keraktelor">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Kerak Telor</b></h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid-12">
+        <div class="container-fluid-12-content">
+            <div class="container-fluid-12-content-2">
+            </div>
+        </div>
+    </div>
+
+
     <!--Script jquery-->
     <script>
         $(window).scroll(function(){
