--- a/wisata.html
+++ b/wisata.html
@@ -24,10 +24,10 @@
         </div>
         <div class="navigation-menu-1">
             <ul>
-                <li><a href="#" class="link-navigation-1">Home</a></li>
+                <li><a href="index.html" class="link-navigation-1">Home</a></li>
                 <li><a href="#" class="link-navigation-1">Sejarah</a></li>
                 <li><a href="#" class="link-navigation-1">Budaya</a></li>
-                <li><a href="#" class="link-navigation-1">Wisata</a></li>
+                <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
                 <li><a href="#" class="link-navigation-1">Rute</a></li>
                 <li><a href="#" class="link-navigation-1">Kuliner</a></li>
             </ul>
