--- a/wisata.html
+++ b/wisata.html
@@ -39,8 +39,17 @@
 
     <!--container-->
     <div class="container-1">
-        <div class="content-1">
+        <div class="judul-1">
             <h1 class="judul">WISATA JAKARTA</h1>
+        </div>
+        <div class="content-1">
+            <hr>
+            <div class="picture-content-1">
+                <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+            </div>
+            <div class="text-content-1">
+                <p></p>
+            </div>
         </div>
     </div>
 
