--- a/wisata.html
+++ b/wisata.html
@@ -42,15 +42,21 @@
         <div class="judul-1">
             <h1 class="judul">WISATA JAKARTA</h1>
         </div>
+        <hr>
         <div class="content-1">
-            <hr>
             <div class="picture-content-1">
                 <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
             </div>
             <div class="text-content-1">
-                <p></p>
+                <div class="tag-1">
+                    <p>Sejarah</p>
+                </div>
+                <div class="tag-2">
+                    <p>Kota Tua</p>
+                </div>
             </div>
         </div>
+        <hr>
     </div>
 
     <script>
