--- a/wisata.html
+++ b/wisata.html
@@ -48,11 +48,22 @@
                 <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
             </div>
             <div class="text-content-1">
-                <div class="tag-1">
-                    <p>Sejarah</p>
+                <div class="tagg">
+                    <div class="tag-1">
+                        <p>Sejarah</p>
+                    </div>
+                    <div class="tag-2">
+                        <p>Kota Tua</p>
+                    </div>
                 </div>
-                <div class="tag-2">
-                    <p>Kota Tua</p>
+                <div class="judul-content">
+                    <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                </div>
+                <div class="creator-content-1">
+                    <p>Penulis : yunpnzr</p>
+                </div>
+                <div class="text-content-main">
+
                 </div>
             </div>
         </div>
