--- a/wisata.html
+++ b/wisata.html
@@ -63,7 +63,10 @@
                     <p>Penulis : yunpnzr</p>
                 </div>
                 <div class="text-content-main">
-
+                    <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                </div>
+                <div class="creator-content-1">
+                    <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
                 </div>
             </div>
         </div>
