nambahin content kedua

--- a/wisata.html
+++ b/wisata.html
@@ -71,6 +71,33 @@
             </div>
         </div>
         <hr>
+        <div class="content-1">
+            <div class="picture-content-1">
+                <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="" srcset="">
+            </div>
+            <div class="text-content-1">
+                <div class="tagg">
+                    <div class="tag-1">
+                        <p>Sejarah</p>
+                    </div>
+                    <div class="tag-2">
+                        <p>Kota Tua</p>
+                    </div>
+                </div>
+                <div class="judul-content">
+                    <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
+                </div>
+                <div class="creator-content-1">
+                    <p>Penulis : yunpnzr</p>
+                </div>
+                <div class="text-content-main">
+                    <p>Kota Tua Batavia dengan Pelabuhan Sunda Kelapa adalah cikal bakal dari kota Jakarta saat ini. Melintasi wilayah Jakarta Utara dan Jakarta Barat, kawasan ini memiliki luas sekira 139 hektar yang didominasi bangunan arsitektur Eropa dan China dari abad ke-17 hingga awal abad ke-20.  <a href="#">Read more...</a></p>
+                </div>
+                <div class="creator-content-1">
+                    <p>Sumber : http://www.inditourist.com/read/kota-tua-saksi-bisu-sejarah-ibukota.html</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
