pusing sama button form njirs

--- a/index.html
+++ b/index.html
@@ -570,15 +570,16 @@
 			</div>
 
 			<div class="footer-right">
-				<form class="row g-2">
-                    <div class="col-auto">
-                        <label for="inputPassword2" class="visually-hidden">Password</label>
-                        <input type="email" class="form-control" id="inputPassword2" placeholder="Password">
+				<form>
+                    <div class="row">
+                        <div class="col-auto">
+                            <input type="email" name="email" placeholder="Tulis email anda untuk berlangganan berita" />
+                        </div>
+                        <div class="col-auto">
+                            <input type="submit" value="Langganan">
+                        </div>
                     </div>
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-primary btn-sm">Langganan</button>
-                    </div>
-                    </form>
+                </form>
 			</div>
 
 		</footer>
