--- a/artikel_wisata.html
+++ b/artikel_wisata.html
@@ -8,7 +8,7 @@
      <!--Bootstrap-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
      <!--CSS-->
-     <link rel="stylesheet" href="../project_web_dasar/css/wisata.css">
+     <link rel="stylesheet" href="../project_web_dasar/css/artikel_wisata.css">
      <!--font awesome-->
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
@@ -37,5 +37,19 @@
         </div>
     </div>
     
+    <!--Jumbotron-->
+    <div class="jumbotron-1"></div>
+
+    <!--Content-->
+    <div class="content-main">
+        <div class="isi-content">
+            <div class="judul-main">
+                <h1>Kota Tua, Saksi Bisu Sejarah Ibukota</h1>
+            </div>
+            <div>
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
